# email_library

./: README.md  pyproject.toml
email_integration/core/: __init__.py  constant.py  logging.py
email_integration/domain/: __init__.py  readme.md
email_integration/domain/interfaces/: __init__.py  base_provider.py
email_integration/domain/models/: __init__.py  attachment.py  email_detail.py  email_filter.py  email_message.py  folders.py
email_integration/exceptions/: __init__.py  attachment.py  auth.py  base.py  filter.py  network.py  provider.py
email_integration/providers/: __init__.py  readme.md  registry.py
email_integration/providers/gmail/: folder_mapping.py  normalizer.py  provider.py  query_builder.py
email_integration/providers/outlook/: folder_mapping.py  normalizer.py  provider.py  query_builder.py
email_integration/services/: email_core.py  email_reader.py  readme.md
email_integration/tests/: test_script.py
fastapi_app/: main.py
fastapi_app/api/: email.py  schemas.py
frontend/: email-client.html  index-start.html  index.html
frontend/js/: api-client.js  email-client.js
